# flow-sentinel

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  app.py  pyproject.toml
frontend/: Dockerfile  app.py  pyproject.toml
grafana/provisioning/dashboards/: dashboards.yaml  main-dashboard.json
grafana/provisioning/datasources/: datasource.yaml
prometheus/: prometheus.yml
