[project]
name = "frontend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fpdf>=1.7.2",
    "polars>=1.37.1",
    "psycopg[binary,pool]>=3.3.2",
    "pytz>=2025.2",
    "streamlit>=1.53.1",
    "streamlit-calendar>=1.4.0",
    "streamlit-js-eval>=1.0.0",
]
